--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -8,6 +8,7 @@
     border: transparent;
     border-width: 2px;
     border-radius: 20px;
+    cursor:pointer
     /*rgba(227, 210, 210, 0.45);*/
 }
 
