--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -3,14 +3,18 @@
     display: flex;
     justify-content: space-between;
 }
+.subTitle {
+    margin-left: 0px;
+    color: rgb(5, 241, 255);
+    margin-top: 20px;
+}
 
-.imageContainer {
-    display: flex;
-    align-items: center;
-  }
-
-  .imageStyle{
-    margin-left: 20px;
-    height: 40px;
-    margin-bottom: 10px;
+  @media (max-width: 1000px) {
+    .subTitle {
+      margin-left: 20px;
+    }
+    .formationContainer {
+      display: block;
+      padding-bottom: 30px;
+    }
   }
