--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,11 @@
   src: url("../public/Nunito-LightItalic.ttf");
 }
 
+@font-face {
+  font-family: "NunitoRegular";
+  src: url("../public/Nunito-Regular.ttf");
+}
+
 body {
   max-width: 800px;
   justify-content: center;
