--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 
   @font-face {
     font-family: "PoppinsBold";
-    src: url("../../../public/Poppins-Bold.ttf");
+    src: url("/Poppins-Bold.ttf");
   }
   
   .ulHeader {
