--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -43,6 +43,8 @@ h1{
     .btnContainer {
         margin-left: 0px;
         margin-top: 100px;
+        width: auto;
+
     }
     h1{
         text-align: left;
