--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,31 @@
 @font-face {
   font-family: "Poppins";
-  src: url("/Poppins-Regular.ttf");
+  src: url("/fonts/Poppins-Regular.ttf");
 }
 
 @font-face {
   font-family: "Playfair";
-  src: url("/PlayfairDisplay-Bold.ttf");
+  src: url("/fonts/PlayfairDisplay-Bold.ttf");
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/Nunito-Bold.ttf");
+  src: url("/fonts/Nunito-Bold.ttf");
 }
 
 @font-face {
   font-family: "NunitoSemiBold";
-  src: url("/Nunito-SemiBold.ttf");
+  src: url("/fonts/Nunito-SemiBold.ttf");
 }
 
 @font-face {
   font-family: "NunitoItalic";
-  src: url("/Nunito-LightItalic.ttf");
+  src: url("/fonts/Nunito-LightItalic.ttf");
 }
 
 @font-face {
   font-family: "NunitoRegular";
-  src: url("/Nunito-Regular.ttf");
+  src: url("/fonts/Nunito-Regular.ttf");
 }
 
 body {
