from jpg and png to webp

--- a/src/index.css
+++ b/src/index.css
@@ -11,21 +11,25 @@
 @font-face {
   font-family: "Nunito";
   src: url("/fonts/Nunito-Bold.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "NunitoSemiBold";
   src: url("/fonts/Nunito-SemiBold.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "NunitoItalic";
   src: url("/fonts/Nunito-LightItalic.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "NunitoRegular";
   src: url("/fonts/Nunito-Regular.ttf");
+  font-display: swap;
 }
 
 body {
