--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,7 @@
   @font-face {
     font-family: "PoppinsBold";
     src: url("/Poppins-Bold.ttf");
+    font-display: swap;
   }
   
   .ulHeader {
