--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 @font-face {
   font-family: "Poppins";
   src: url("/fonts/Poppins-Regular.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Playfair";
   src: url("/fonts/PlayfairDisplay-Bold.ttf");
+  font-display: swap;
 }
 
 @font-face {
