--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -77,6 +77,7 @@ form {
     margin-right: 10px;
     align-self: flex-start;
     height: 30px;
+    width: auto;
     margin-top: 6px;
   }
 
@@ -89,6 +90,7 @@ form {
     margin-right: 10px;
     align-self: flex-start;
     height: 30px;
+    width: auto;
     margin-top: 6px;
   }
 
