tables changed for tablas

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -213,7 +213,7 @@ a {
         margin: 0px;
     }
 
-    .projectIcon {
+    .projectIcon {b g
         margin-top: 5px;
         width: auto;
         height: auto;
