--- a/src/components/Stack/Stack.css
+++ b/src/components/Stack/Stack.css
@@ -1,6 +1,7 @@
 .iconStyle {
     padding: 10px;
-    margin-right: 28px;
+    margin-left: 28px;
     width: 60px;
     height: 50px;
+    margin-top: 20px;
 }
