--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -52,8 +52,16 @@
   
   @media (max-width: 800px) {
     li {
-      font-size: 12px;
+      font-size: 9px;
       padding-right: 1rem;
+    }
+
+    .langContainer {
+      margin-right: 40px;
+      font-size: 9px;
+    }
+    .langButton{
+      font-size: 9px;
     }
  
   }
@@ -62,4 +70,5 @@
     .header{
         margin-left: 10px;
     }
+ 
   }
