--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -192,7 +192,7 @@ a {
 
     .projectImg {
         border: solid;
-        border-color: #0D47A1;;
+        border-color: #0D47A1;
         height: 165px;
         width: 305px;
         margin-left: 0px;
