--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ body {
 .divider {
   width: 100%;
   height: 2px;
-  background-color: #045491; /* dejarlo en este color o ponerlo en negro*/
+  background-color: #045491; 
   margin-top: 20px;
 }
 
